# maelstrom-ci

./: .gitignore  Earthfile  README.md
.github/workflows/: ci.yml
solutions/: Cargo.toml  README.md
solutions/src/: io.rs  lib.rs  message.rs
